src/test/ui/consts/const-eval/ub-enum-overwrite.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-enum-overwrite.rs:13:14
   |
LL |     unsafe { *p }
   |              ^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
